--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
+    "connect-pg-simple": "^10.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "express-session": "^1.18.1",
     "next": "15.3.1",
-    "next-auth": "^4.24.11",
-    "pg": "^8.15.2",
+    "next-auth": "^5.0.0-beta.27",
+    "next-connect": "^1.0.0",
+    "pg": "^8.15.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/cookie-parser": "^1.4.8",
     "@types/node": "^20",
     "@types/pg": "^8.11.13",
     "@types/react": "^19",
